filter background color

--- a/view/zfc-datagrid/renderer/bootstrapTable/layout.phtml
+++ b/view/zfc-datagrid/renderer/bootstrapTable/layout.phtml
@@ -114,7 +114,7 @@ if($this->rowClickAction !== null){
         
         <!-- User filters -->
         <?php if($this->isUserFilterEnabled === true):?>
-            <tr>
+            <tr style="background-color: #EEE">
                 <?php
                 foreach($this->columns as $col){
                     /* @var $col \ZfcDatagrid\Column\AbstractColumn */
