--- a/view/zfc-datagrid/renderer/bootstrapTable/footer.phtml
+++ b/view/zfc-datagrid/renderer/bootstrapTable/footer.phtml
@@ -1,103 +1,65 @@
-<?php
-use ZfcDatagrid\Column;
+<!-- Start footer -->
+<div class="row-fluid row" id="<?php echo $this->gridId; ?>_footer">
 
-$pages = $this->paginator->getPages();
-
-$paginatorOnclick = 'document.forms[\'form_'.$this->gridId.'\'].elements[\'' . $this->parameterNames['currentPage'] . '\'].value = %s;';
-$paginatorOnclick.= 'document.forms[\'form_'.$this->gridId.'\'].submit(); return false;';
-?>
-<!-- Start Pagination -->
-<div class="row-fluid row">
+    <!-- mass actions -->
     <div class="span4 col-md-4">
         <?php 
+        foreach($this->massActions as $action){
+            /* @var $action \ZfcDatagrid\Action\Mass */
+            ?>
+            <a href="#" class="btn btn-default massAction" data-url="<?php echo $action->getLink(); ?>">
+                <?php echo $this->translate($action->getTitle()); ?>
+            </a>
+            <?php
+        }
         ?>
     </div>
-    <div class="span4 col-md-4">
-        <div class="pagination">
-        
-            <input type="hidden" name="<?php echo $this->parameterNames['currentPage']; ?>" value="<?php echo $pages->current; ?>" />
-            <?php if (count($pages->pagesInRange) > 1): ?>
-            <ul class="pagination">
-                <?php if($pages->current > 1):?>
-                    <li><a href="<?php echo 
-                            $this->url(null, 
-                                array(),
-                                array(
-                                    'query' => array_merge($this->activeParameters, array(
-                                            $this->parameterNames['currentPage'] => $pages->current - 1
-                                        )
-                                    )
-                                ),
-                                true
-                            );?>
-                        "  onclick="<?php echo sprintf($paginatorOnclick, $pages->current - 1);?>">
-                            &laquo;
-                        </a>
-                    </li>
-                <?php else: ?>
-                    <li class="disabled">
-                        <a href="#">&laquo;</a>
-                    </li>
-                <?php endif;?>
-                
-                <?php foreach($pages->pagesInRange as $page):?>
-                    <?php 
-                    $add = '';
-                    if($pages->current === $page){
-                        $add = 'class="active"';
-                    }
-                    
-                    if($pages->current != $page){
-                        $url = $this->url($this->matchedRouteName, 
-                            array(),
-                            array(
-                                'query' => array_merge($this->activeParameters, array(
-                                        $this->parameterNames['currentPage'] => $page
-                                    )
-                                )
-                            ),
-                            true
-                        );
-                    } else{
-                        $url = '#';
-                    }
-                    ?>
-                    <li <?php echo $add; ?>>
-                        <a href="<?php echo $url; ?>" onclick="<?php echo sprintf($paginatorOnclick, $page);?>">
-                            <?php echo $page; ?>
-                        </a>
-                    </li>
-                <?php endforeach; ?>
-                
-                <?php if($pages->current < $pages->pageCount): ?>
-                    <li>
-                        <a href="<?php echo 
-                            $this->url($this->matchedRouteName, 
-                                array(),
-                                array(
-                                    'query' => array_merge($this->activeParameters, array(
-                                            $this->parameterNames['currentPage'] => $pages->current + 1
-                                        )
-                                    )
-                                ),
-                                true
-                            );?>
-                        " onclick="<?php echo sprintf($paginatorOnclick, $pages->current + 1);?>">
-                            &raquo;
-                        </a>
-                    </li>
-                    
-                <?php else: ?>
-                    <li class="disabled">
-                        <a href="#">&raquo;</a>
-                    </li>
-                <?php endif;?>
-                
-            </ul>
-            <?php endif; ?>
-        </div>
+    
+    <!-- Pagination -->
+    <div class="span4 col-md-4 text-center">
+        <input type="hidden" name="<?php echo $this->parameterNames['currentPage']; ?>" value="<?php echo $this->paginator->getPages()->current; ?>" />
+        <?php 
+        echo $this->paginationcontrol($this->paginator, 'Elastic', 'zfc-datagrid/renderer/bootstrapTable/paginator', array(
+            'activeParameters' => $this->activeParameters, 
+            'parameterNames' => $this->parameterNames,
+            'gridId' => $this->gridId
+        ));
+        ?>
     </div>
+    <!-- Info -->
     <div class="span4 col-md-4 text-right">
         <?php echo $this->translate('Showing').' '.$this->paginator->getCurrentItemCount().' '.$this->translate('of').' '.$this->paginator->getTotalItemCount().' '.$this->translate('items'); ?>
     </div>
-</div><!-- End Pagination -->
+</div><!-- End footer -->
+
+<?php $this->headScript()->captureStart();?>
+function toggleCheckboxes(element){
+    var elements = document.getElementsByName('massActionSelected[]');
+    
+    var useThis = element.checked;
+    for(i = 0; i < elements.length; i++){
+        elements[i].checked = useThis;
+    }
+}
+
+$( document ).ready(function() {
+    $('#<?php echo $this->gridId; ?>_footer a.massAction').click( function() {
+        var form = document.createElement('form');
+        form.setAttribute('name', 'massAction');
+        form.setAttribute('method', 'post');
+        form.setAttribute('action', $(this).attr('data-url'));
+        
+        var checkboxes = document.getElementsByName('massActionSelected[]');
+        for(i = 0; i < checkboxes.length; i++){
+            var node = checkboxes[i].cloneNode();
+            node.name = '<?php echo $this->parameterNames['massIds']; ?>[]';
+            form.appendChild(node);
+        }
+        
+        document.body.appendChild(form);
+        form.submit();
+        document.body.removeChild(form);
+    });
+});
+
+<?php $this->headScript()->captureEnd(); ?>
