--- a/view/zfc-datagrid/renderer/jqGrid/footer.phtml
+++ b/view/zfc-datagrid/renderer/jqGrid/footer.phtml
@@ -111,7 +111,7 @@ function <?php echo $this->gridId; ?>_customPaginator(gridId){
 
     //one page right
     if(currentPage < totalPages){
-        html += '<li><a href="#" onclick="">&gt;</a></li>';
+        html += '<li><a href="#" onclick="<?php echo $this->gridId; ?>_loadPage(\'' + gridId + '\', ' + (currentPage + 1) + ');">&gt;</a></li>';
     } else{
     	html += '<li class="disabled"><a href="#">&gt;</a></li>';
     }
@@ -123,7 +123,7 @@ function <?php echo $this->gridId; ?>_customPaginator(gridId){
     	html += '<li class="disabled"><a href="#">&raquo;</a></li>';
     }
     
-    html = '<ul class="pagination">' + html + '</ul>';
+    html = '<div class="pagination"><ul class="pagination">' + html + '</ul></div>';
     
 	return html;
 }
