--- a/view/zfc-datagrid/toolbar/toolbar.phtml
+++ b/view/zfc-datagrid/toolbar/toolbar.phtml
@@ -1,21 +1,20 @@
 <div class="row row-fluid" style="margin-bottom: 5px;">
-
     <!-- Actions (add, ...) -->
-    <div class="span2 col-md-2">
-        Here your can add global actions like "Add".<br />
+    <div class="span3 col-md-3 text-left">
+        <?php foreach ($globalActions as $globalActionName => $globalActionURL) : ?>
+        <a class="btn" href="<?php echo $globalActionURL; ?>">
+            <?php echo $globalActionName; ?>
+        </a>
+        <?php endforeach; ?>
     </div>
     
     <!-- Anything else (filter, ...) -->
     <div class="span6 col-md-6">
-        You could add here custom filters or other interesting things<br />
-        Change the toolbar with <code>$grid-&gt;setToolbarTemplate('my-path/awesome-list/grid-toolbar');</code>
+        <?php if ($middleToolbarTemplate) {echo $this->partial($middleToolbarTemplate);} ?>
     </div>
     
     <!-- Export buttons -->
-    <div class="span4 col-md-4 text-right">
-        Here are the enabled export types are shown<br />
-        Template: <code>zfc-datagrid/toolbar/export</code>
+    <div class="span3 col-md-3 text-right">
         <?php echo $this->partial('zfc-datagrid/toolbar/export');?>
     </div>
-    
 </div>
