--- a/view/zfc-datagrid/renderer/bootstrapTable/footer.phtml
+++ b/view/zfc-datagrid/renderer/bootstrapTable/footer.phtml
@@ -65,6 +65,12 @@ $( document ).ready(function() {
         form.submit();
         document.body.removeChild(form);
     });
+    
+    $('#<?php echo $this->gridId; ?> tr').click(function(event) {
+        if (event.target.type !== 'checkbox') {
+          $(':checkbox', this).trigger('click');
+        }
+    });
 });
 
 <?php $this->inlineScript()->captureEnd(); ?>
