--- a/view/zfc-datagrid/renderer/jqGrid/footer.phtml
+++ b/view/zfc-datagrid/renderer/jqGrid/footer.phtml
@@ -23,8 +23,8 @@ $paginator = $this->paginator;
     </div>
     <!-- Info -->
     <div class="span3 col-md-3 text-right" id="<?php echo $this->gridId; ?>_pager_right">
-        <?php echo $this->translate('Showing').' '.$paginator->getCurrentItemCount().' '.$this->translate('of').' '.$paginator->getTotalItemCount().' '.$this->translate('items'); ?><br />
-        <?php echo $this->translate('Page') . ' ' . $paginator->getCurrentPageNumber() . ' ' . $this->translate('of') . ' ' .$paginator->count();?>
+        <?php echo $this->translate('Showing').' <span id="'.$this->gridId.'_currentItems"></span> '.$this->translate('of').' <span id="'.$this->gridId.'_totalItems"></span> '.$this->translate('items'); ?><br />
+        <?php echo $this->translate('Page') . ' <span id="'.$this->gridId.'_currentPage"></span> ' . $this->translate('of') . ' <span id="'.$this->gridId.'_totalPages"></span>'; ?>
     </div>
 </div><!-- End footer -->
 
@@ -56,6 +56,12 @@ function <?php echo $this->gridId; ?>_customPaginator(gridId){
 	var grid = $('#' + gridId).jqGrid();
 	var currentPage = grid.getGridParam('page');
 	var totalPages = grid.getGridParam('lastpage');
+	
+	$('#' + gridId + '_currentItems').html(grid.getRowData().length);
+	$('#' + gridId + '_totalItems').html(grid.getGridParam('records'));
+	
+	$('#' + gridId + '_currentPage').html(currentPage);
+	$('#' + gridId + '_totalPages').html(totalPages);
 	
 	var html = '';
 	if(totalPages < 2){
