--- a/view/zfc-datagrid/renderer/jqGrid/layout.phtml
+++ b/view/zfc-datagrid/renderer/jqGrid/layout.phtml
@@ -120,7 +120,7 @@ foreach($this->rowStyles as $style){
     }
     
     if($cssClass != ''){
-        $cssClass = '$(\'#\' + row.idConcated).find(\'td\').addClass('.$cssClass.');';
+        $cssClass = '$(\'#\' + row.idConcated).find(\'td\').addClass(\'' . $cssClass . '\');';
     }
 
     if ($style->hasByValues() === true) {
